# TwistSpline

./: .gitignore  CMakeLists.txt  README.md  TwistSpline.mod  addNewSplineToRiders.py  mayaConfigure.bat  meson.build  mpkdtree.h  nodeDocs.md  pluginMain.cpp  quick_compile.bat  riderConstraint.cpp  riderConstraint.h  ruff.toml  twistSpline.h  twistSplineBuilder.py  twistSplineData.cpp  twistSplineData.h  twistSplineNode.cpp  twistSplineNode.h  twistSplineUtils.h  twistSpline_maya.h  twistTangentNode.cpp  twistTangentNode.h
.github/workflows/: main.yml
cmake/: FindMaya.cmake
icons/: riderConstraint.xpm  twistMultiTangent.xpm  twistSpline.xpm  twistTangent.xpm
modules/: FindMaya.cmake
scripts/: AEriderConstraintTemplate.mel  AEtwistMultiTangentTemplate.mel  AEtwistSplineTemplate.mel  AEtwistTangentTemplate.mel  twistSplineBuilder.py
src/: decomposeRotation.h  drawOverride.cpp  drawOverride.h  pluginMain.cpp  riderConstraint.cpp  riderConstraint.h  twistMultiTangentNode.cpp  twistMultiTangentNode.h  twistSpline.h  twistSplineData.cpp  twistSplineData.h  twistSplineNode.cpp  twistSplineNode.h  twistSplineUtils.h  twistTangentNode.cpp  twistTangentNode.h
subprojects/maya/: meson.build  meson.options
